Implement new message versioning system to loggers